[package]
name = "bangbang"
version = "0.1.0"
authors = ["Casey Jaymes"]
edition = "2021"
repository = "https://github.com/cjaymes/bangbang.git"
license = "GPL-3.0-or-later"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5.0-rc.2", features=["json"] }
uuid = { version = "1.1.2", features = ["v4"] }
json = { version="0.12.4" }
serde = { version = "1.0.144", features = ["derive"] }
chrono = "0.4.22"
